--- a/examples-nodejs/package.json
+++ b/examples-nodejs/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "GPL-3.0",
   "dependencies": {
-    "hypercore-protocol": "^7.7.1"
+    "hypercore-protocol": "^7.7.1",
+    "noise-protocol": "github:emilbayes/noise-protocol#standard-dh"
   }
 }
