--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,19 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-simple-message-channels = "0.1.1"
-async-std = "1.4.0"
+# simple-message-channels = "0.1.1"
+simple-message-channels = { path = "../simple-message-channels" }
+async-std = "1.5.0"
 futures = "0.3.1"
-# snow = { path = "../snow" }
-snow = { git = "https://github.com/Frando/snow.git", branch = "xchachapoly" }
+snow = { path = "../snow" }
+# snow = { git = "https://github.com/Frando/snow.git", branch = "xchachapoly" }
 prost = "0.6.1"
 bytes = "0.5.4"
 varinteger = "1.0.6"
 rand = "0.7.3"
+blake2-rfc = "0.2.18"
+hex = "0.4.0"
+async-trait = "0.1.22"
 
 [build-dependencies]
 prost-build = "0.6.1"
