--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,12 @@ rand = "0.7.3"
 blake2-rfc = "0.2.18"
 hex = "0.4.0"
 async-trait = "0.1.22"
+salsa20 = "0.4.0"
+log = "0.4.8"
+pretty-hash = "0.4.1"
+
+[dev-dependencies]
+env_logger = "0.7.1"
 
 [build-dependencies]
 prost-build = "0.6.1"
