--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# simple-message-channels = "0.1.1"
-simple-message-channels = { path = "../simple-message-channels" }
+simple-message-channels = "0.2.0"
 async-std = "1.5.0"
 futures = "0.3.1"
-snow = { path = "../snow" }
-# snow = { git = "https://github.com/Frando/snow.git", branch = "xchachapoly" }
+snow = { git = "https://github.com/Frando/snow.git", branch = "datrs" }
 prost = "0.6.1"
 bytes = "0.5.4"
 varinteger = "1.0.6"
