--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,25 +18,38 @@ categories = [
 ]
 
 [dependencies]
-async-std = "1.5.0"
-simple-message-channels = "0.2.0"
-futures = "0.3.1"
-snow = { git = "https://github.com/Frando/snow.git", branch = "datrs-new", features = ["risky-raw-split", "xchachapoly"] }
-prost = "0.6.1"
-bytes = "0.5.4"
-varinteger = "1.0.6"
-rand = "0.7.3"
-blake2-rfc = "0.2.18"
-hex = "0.4.0"
-async-trait = "0.1.22"
-salsa20 = "0.4.0"
-log = "0.4.8"
-pretty-hash = "0.4.1"
-futures-timer = "3.0.2"
+futures = "0.3"
+snow = { git = "https://github.com/Frando/snow.git", branch = "datrs", features = ["risky-raw-split", "xchachapoly"] }
+prost = "0.6"
+bytes = "0.5"
+varinteger = "1.0"
+rand = "0.7"
+blake2-rfc = "0.2"
+hex = "0.4"
+async-trait = "0.1"
+salsa20 = "0.4"
+log = "0.4"
+pretty-hash = "0.4"
+futures-timer = "3.0"
+instant = "0.1"
+getrandom = "0.1"
 
 [dev-dependencies]
+async-std = "1.5.0"
+simple-message-channels = "0.2.0"
 env_logger = "0.7.1"
-hypercore = { git = "https://github.com/bltavares/hypercore", branch = "bitfield-compress" }
+hypercore = { git = "https://github.com/bltavares/hypercore", branch = "async-trait" }
+# hypercore = { path = "../hypercore" }
+random-access-disk = "2.0.0"
+random-access-memory = "2.0.0"
+random-access-storage = "4.0.0"
 
 [build-dependencies]
 prost-build = "0.6.1"
+
+[features]
+wasm-bindgen = [
+  "instant/wasm-bindgen", 
+  "getrandom/wasm-bindgen", 
+  "futures-timer/wasm-bindgen"
+]
