--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "hypercore-protocol"
 version = "0.0.1"
 license = "MIT OR Apache-2.0"
-description = "Binary replication protocol for Hypercore feeds"
+description = "Replication protocol for Hypercore feeds"
 authors = ["Franz Heinzmann (Frando) <frando@unbiskant.org>"]
 documentation = "https://docs.rs/hypercore-protocol"
 repository = "https://github.com/Frando/hypercore-protocol-rs"
@@ -33,17 +33,15 @@ pretty-hash = "0.4"
 futures-timer = "3.0"
 instant = "0.1"
 getrandom = "0.1"
-pin-project-lite = "0.1.4"
 
 [dev-dependencies]
 async-std = "1.5.0"
-simple-message-channels = "0.2.0"
 env_logger = "0.7.1"
-hypercore = { git = "https://github.com/bltavares/hypercore", branch = "async-trait" }
-# hypercore = { path = "../hypercore" }
+hypercore = { git = "https://github.com/Frando/datrs-hypercore", branch = "protocol-dev" }
 random-access-disk = "2.0.0"
 random-access-memory = "2.0.0"
 random-access-storage = "4.0.0"
+anyhow = "1.0.28"
 
 [build-dependencies]
 prost-build = "0.6.1"
