Close logic, cleanup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ bench = false
 
 [dependencies]
 futures = "0.3"
-snow = { git = "https://github.com/mcginty/snow.git", branch = "master", features = ["risky-raw-split", "xchachapoly"] }
+snow = { git = "https://github.com/mcginty/snow.git", branch = "master", features = ["risky-raw-split"] }
 prost = "0.6"
 bytes = "0.5"
 varinteger = "1.0"
@@ -42,12 +42,14 @@ getrandom = "0.1"
 async-std = "1.5"
 env_logger = "0.7.1"
 hypercore = { git = "https://github.com/Frando/datrs-hypercore", branch = "protocol-dev" }
+# hypercore = { path = "../hypercore" }
 random-access-disk = "2.0.0"
 random-access-memory = "2.0.0"
 random-access-storage = "4.0.0"
 anyhow = "1.0.28"
 criterion = "0.3.2"
 pretty-bytes = "0.2.2"
+piper = "0.1.1"
 
 [build-dependencies]
 prost-build = "0.6.1"
@@ -60,6 +62,9 @@ wasm-bindgen = [
 ]
 
 [profile.bench]
+debug = true
+
+[profile.release]
 debug = true
 
 [[bench]]
