--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,8 +41,7 @@ getrandom = "0.1"
 [dev-dependencies]
 async-std = "1.5"
 env_logger = "0.7.1"
-hypercore = { git = "https://github.com/Frando/datrs-hypercore", branch = "protocol-dev" }
-# hypercore = { path = "../hypercore" }
+hypercore = { git = "https://github.com/datrs/hypercore", branch = "master" }
 random-access-disk = "2.0.0"
 random-access-memory = "2.0.0"
 random-access-storage = "4.0.0"
