--- a/examples-nodejs/package.json
+++ b/examples-nodejs/package.json
@@ -11,7 +11,7 @@
   "license": "GPL-3.0",
   "dependencies": {
     "chalk": "^4.0.0",
-    "hypercore": "mafintosh/hypercore#v9",
+    "hypercore": "^9.0",
     "hypercore-protocol": "^8.0",
     "pretty-bytes": "^5.3.0",
     "random-access-memory": "^3.1.1",
