--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ criterion = "0.3.2"
 pretty-bytes = "0.2.2"
 duplexify = "1.1.0"
 sluice = "0.5.4"
+futures = "0.3.13"
 
 [build-dependencies]
 prost-build = "0.6.1"
