--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,7 +43,7 @@ futures-lite = "1.11.3"
 async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
 env_logger = "0.7.1"
 hypercore = { git = "https://github.com/ttiurani/hypercore", branch = "v10", default-features = false }
-random-access-disk = "2.0.0"
+random-access-disk = { git = "https://github.com/ttiurani/random-access-disk", branch = "v10" }
 random-access-memory = { git = "https://github.com/ttiurani/random-access-memory", branch = "v10" }
 random-access-storage = "4.0.0"
 anyhow = "1.0.28"
