--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ async-channel = "1.5"
 snow = { version = "0.9.0", features = ["risky-raw-split"] }
 prost = { version = "0.7", optional = true }
 bytes = "1.0.1"
-varinteger = "1.0"
+varinteger = { version = "1.0", optional = true }
 rand = "0.7"
 blake2-rfc = "0.2"
 hex = "0.4"
@@ -57,13 +57,13 @@ futures = "0.3.13"
 prost-build = { version = "0.6.1", optional = true }
 
 [features]
-default = ["v9"]
+default = ["v10"]
 wasm-bindgen = [
   "instant/wasm-bindgen", 
   "getrandom/wasm-bindgen", 
   "futures-timer/wasm-bindgen"
 ]
-v9 = ["prost", "prost-build", "hypercore/v9"]
+v9 = ["prost", "prost-build", "varinteger", "hypercore/v9",]
 v10 = ["hypercore/v10"]
 
 [profile.bench]
