--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,11 +38,13 @@ futures-timer = "3.0"
 instant = "0.1"
 getrandom = "0.1"
 futures-lite = "1.11.3"
+hypercore = { git = "https://github.com/ttiurani/hypercore", branch = "v10", default-features = false }
+sha2 = "0.10.6"
+curve25519-dalek = "3.2.1"
 
 [dev-dependencies]
 async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
 env_logger = "0.7.1"
-hypercore = { git = "https://github.com/ttiurani/hypercore", branch = "v10", default-features = false }
 random-access-disk = { git = "https://github.com/ttiurani/random-access-disk", branch = "v10" }
 random-access-memory = { git = "https://github.com/ttiurani/random-access-memory", branch = "v10" }
 random-access-storage = "4.0.0"
