--- a/examples-nodejs-v10/package.json
+++ b/examples-nodejs-v10/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "hypercore": "^10",
+    "hypercore": "file:../../hypercore-js",
     "pretty-bytes": "^5.3.0",
     "random-access-memory": "^6.0.0",
     "split2": "^3.1.1"
