--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,10 @@ getrandom = "0.1"
 futures-lite = "1.11.3"
 hypercore = { git = "https://github.com/ttiurani/hypercore", branch = "v10", default-features = false }
 sha2 = "0.10.6"
-curve25519-dalek = "3.2.1"
+# FIXME: This uses a commit from the release/4.0 branch, because is has relaxed the zeroize version range.
+# With this the crate be buildable with other crates that use zeroize >=1.5. When 4.0 releases, switch
+# to that.
+curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8fa201639aeeb1a3b90f38c561441097a36105e4" }
 crypto_secretstream = { version = "0.1.0", optional = true }
 
 [dev-dependencies]
