Fix benches, performance decreased with v9->v10
The reason for the performance drop is not yet researched.

Guess is because pipe/pipe_echo uses encryption and shows bigger drop, that most
likely has too do with the new SecretStream phase, which means more rounds of
handshaking and thus more time used.

The small drop in throughput/echo (no SecretStream) might have something
to do with encoding, prost vs compact_encoding.

Results:

     Running benches/pipe.rs (target/release/deps/pipe-22b809aad8dc7e0c)
pipe/pipe_echo          time:   [33.924 ms 34.963 ms 36.208 ms]
                        thrpt:  [26.339 MiB/s 27.277 MiB/s 28.112 MiB/s]
                 change:
                        time:   [+27.952% +32.433% +36.786%] (p = 0.00 < 0.05)
                        thrpt:  [-26.893% -24.490% -21.846%]
                        Performance has regressed.
Found 1 outliers among 10 measurements (10.00%)
  1 (10.00%) high severe

     Running benches/throughput.rs (target/release/deps/throughput-92174f564d6e1477)
throughput/echo         time:   [14.736 ms 14.798 ms 14.892 ms]
                        thrpt:  [12.808 MiB/s 12.889 MiB/s 12.944 MiB/s]
                 change:
                        time:   [+2.8803% +3.7827% +4.7262%] (p = 0.00 < 0.05)
                        thrpt:  [-4.5129% -3.6448% -2.7997%]
                        Performance has regressed.
Found 1 outliers among 10 measurements (10.00%)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -54,7 +54,7 @@ random-access-storage = { git = "https://github.com/ttiurani/random-access-stora
 random-access-disk = { git = "https://github.com/ttiurani/random-access-disk", branch = "v10" }
 random-access-memory = { git = "https://github.com/ttiurani/random-access-memory", branch = "v10" }
 anyhow = "1.0.28"
-criterion = "0.3.2"
+criterion = { version = "0.4", features = ["async_std"] }
 pretty-bytes = "0.2.2"
 duplexify = "1.1.0"
 sluice = "0.5.4"
