--- a/Cargo.toml
+++ b/Cargo.toml
@@ -65,7 +65,7 @@ cfg-if = "1.0"
 prost-build = { version = "0.6.1", optional = true }
 
 [features]
-default = ["v10", "tokio"]
+default = ["v10", "async-std"]
 wasm-bindgen = [
   "instant/wasm-bindgen", 
   "getrandom/wasm-bindgen", 
