--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,9 @@ bench = false
 
 [dependencies]
 async-channel = "1.5"
-snow = { version = "0.9.0", features = ["risky-raw-split"] }
+# FIXME: Once there is a new version of snow with fix to rc.0 compilation break, switch to it.
+# snow = { version = "0.9.0", features = ["risky-raw-split"] }
+snow = { git = "https://github.com/tarcieri/snow", branch = "curve25519-dalek/v4.0.0-rc.0", features = ["risky-raw-split"] }
 prost = { version = "0.7", optional = true }
 bytes = "1.0.1"
 varinteger = { version = "1.0", optional = true }
@@ -42,7 +44,7 @@ hypercore = { git = "https://github.com/ttiurani/hypercore", branch = "tokio", d
 sha2 = "0.10.6"
 # FIXME: This uses pre-release, because v4 relaxed the zeroize version range. With this the crate be
 # buildable with other crates that use zeroize >=1.5. When 4.0 releases, switch to that.
-curve25519-dalek = "4.0.0-pre.5"
+curve25519-dalek = "4.0.0-rc.0"
 crypto_secretstream = { version = "0.1.1", optional = true }
 
 [dev-dependencies]
