--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ futures-timer = "3.0"
 instant = "0.1"
 getrandom = "0.1"
 futures-lite = "1.11.3"
-hypercore = { git = "https://github.com/ttiurani/hypercore", branch = "v10_cleanup", default-features = false }
+hypercore = { git = "https://github.com/datrs/hypercore", branch = "v10", default-features = false }
 sha2 = "0.10.6"
 # FIXME: This uses pre-release, because v4 relaxed the zeroize version range. With this the crate be
 # buildable with other crates that use zeroize >=1.5. When 4.0 releases, switch to that.
