--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,7 @@ on:
   pull_request:
   push:
     branches:
-      # FIXME: back to master
-      - v10
+      - master
 
 env:
   RUST_BACKTRACE: 1
@@ -15,15 +14,13 @@ jobs:
     name: CI is green
     runs-on: ubuntu-latest
     needs:
-      - test-linux
-      - test-windows
-      - test-macos
+      - test
       - build-extra
       - lint
     steps:
       - run: exit 0
 
-  test-linux:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -34,66 +31,10 @@ jobs:
     - name: Run tests
       run: |
         cargo check --no-default-features --features tokio
-        cargo check --no-default-features --features tokio,sparse
-        cargo check --no-default-features --features tokio,sparse,cache
         cargo check --no-default-features --features async-std
-        cargo check --no-default-features --features async-std,sparse
-        cargo check --no-default-features --features async-std,sparse,cache
         cargo test --no-default-features --features js_interop_tests,tokio
-        cargo test --no-default-features --features js_interop_tests,tokio,sparse
-        cargo test --no-default-features --features js_interop_tests,tokio,sparse,cache
         cargo test --no-default-features --features js_interop_tests,async-std
-        cargo test --no-default-features --features js_interop_tests,async-std,sparse
-        cargo test --no-default-features --features js_interop_tests,async-std,sparse,cache
         cargo test --benches
-
-  test-windows:
-    runs-on: windows-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt
-      - name: Run tests
-        run: |
-          cargo check --no-default-features --features tokio
-          cargo check --no-default-features --features tokio,sparse
-          cargo check --no-default-features --features tokio,sparse,cache
-          cargo check --no-default-features --features async-std
-          cargo check --no-default-features --features async-std,sparse
-          cargo check --no-default-features --features async-std,sparse,cache
-          cargo test --no-default-features --features tokio
-          cargo test --no-default-features --features tokio,sparse
-          cargo test --no-default-features --features tokio,sparse,cache
-          cargo test --no-default-features --features async-std
-          cargo test --no-default-features --features async-std,sparse
-          cargo test --no-default-features --features async-std,sparse,cache
-          cargo test --benches
-
-  test-macos:
-    runs-on: macos-latest
-
-    steps:
-      - uses: actions/checkout@v3
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          components: rustfmt
-      - name: Run tests
-        run: |
-          cargo check --no-default-features --features tokio
-          cargo check --no-default-features --features tokio,sparse
-          cargo check --no-default-features --features tokio,sparse,cache
-          cargo check --no-default-features --features async-std
-          cargo check --no-default-features --features async-std,sparse
-          cargo check --no-default-features --features async-std,sparse,cache
-          cargo test --no-default-features --features js_interop_tests,tokio
-          cargo test --no-default-features --features js_interop_tests,tokio,sparse
-          cargo test --no-default-features --features js_interop_tests,tokio,sparse,cache
-          cargo test --no-default-features --features js_interop_tests,async-std
-          cargo test --no-default-features --features js_interop_tests,async-std,sparse
-          cargo test --no-default-features --features js_interop_tests,async-std,sparse,cache
-          cargo test --benches
 
   build-extra:
     runs-on: ubuntu-latest
@@ -110,11 +51,7 @@ jobs:
       - name: Build release
         run: |
           cargo build --release --no-default-features --features tokio
-          cargo build --release --no-default-features --features tokio,sparse
-          cargo build --release --no-default-features --features tokio,sparse,cache
           cargo build --release --no-default-features --features async-std
-          cargo build --release --no-default-features --features async-std,sparse
-          cargo build --release --no-default-features --features async-std,sparse,cache
       - name: Build examples
         run: |
           cargo build --example replication 
