--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ hypercore = { version = "0.13.0",  default-features = false }
 sha2 = "0.10"
 curve25519-dalek = "4"
 crypto_secretstream = "0.2"
-tokio = { version = "1.12.0", featuers = ["sync"], optional = true }
+tokio = { version = "1.12.0", features = ["sync"], optional = true }
 
 [dev-dependencies]
 async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
