--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ tracing = "0.1"
 pretty-hash = "0.4"
 futures-timer = "3"
 futures-lite = "1"
-hypercore = { path = "../core",  default-features = false }
+hypercore = { git = "https://github.com/cowlicks/hypercore.git", branch = "add-events" }
 sha2 = "0.10"
 curve25519-dalek = "4"
 crypto_secretstream = "0.2"
