--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
         cargo check --all-targets
         cargo check --all-targets --no-default-features --features tokio
         cargo check --all-targets --no-default-features --features async-std
+        cargo test --features js_interop_tests
         cargo test --no-default-features --features js_interop_tests,tokio
         cargo test --no-default-features --features js_interop_tests,async-std
         cargo test --benches
