--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,10 +36,14 @@ tracing = "0.1"
 pretty-hash = "0.4"
 futures-timer = "3"
 futures-lite = "1"
-hypercore = { version = "0.14.0",  default-features = false }
 sha2 = "0.10"
 curve25519-dalek = "4"
 crypto_secretstream = "0.2"
+
+[dependencies.hypercore]
+version = "0.14.0"
+default-features = false
+
 
 [dev-dependencies]
 async-std = { version = "1.12.0", features = ["attributes", "unstable"] }
