--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,11 +31,9 @@ jobs:
     - name: Run tests
       run: |
         cargo check --all-targets
-        cargo check --all-targets --no-default-features --features tokio
-        cargo check --all-targets --no-default-features --features async-std
-        cargo test --features js_interop_tests
-        cargo test --no-default-features --features js_interop_tests,tokio
-        cargo test --no-default-features --features js_interop_tests,async-std
+        cargo check --all-targets --no-default-features
+        cargo test --features js_tests
+        cargo test --no-default-features --features js_tests
         cargo test --benches
 
   build-extra:
@@ -48,15 +46,13 @@ jobs:
           targets: wasm32-unknown-unknown
       - name: Build WASM
         run: |
-          cargo build --target=wasm32-unknown-unknown --no-default-features --features wasm-bindgen,tokio
-          cargo build --target=wasm32-unknown-unknown --no-default-features --features wasm-bindgen,async-std
+          cargo build --target=wasm32-unknown-unknown --no-default-features --features wasm-bindgen
       - name: Build release
         run: |
-          cargo build --release --no-default-features --features tokio
-          cargo build --release --no-default-features --features async-std
+          cargo build --release --no-default-features
       - name: Build examples
         run: |
-          cargo build --example replication 
+          cargo build --example replication
 
   lint:
     runs-on: ubuntu-latest
